Let ComputeHorizontalValue handle unconstrained width, since unconstrained width only means the vertical margin is unknown in some cases.  Patch by Mats Palmgren <mats.palmgren@bredband.net>.  r+sr=dbaron  a=asa  b=209066